# dovecot-boxstats

./: .gitignore  Makefile.am  README.adoc  configure.ac
src/: Makefile.am  boxstats.h  main.c  metric-api.h  metric-bool.c  metric-bool.h  metric-size.c  metric-size.h  metric.c  misc.h  scan.c  scanner-api.h  scanner-cache.c  scanner-index.c  scanner-mail.c
